# lab04

.github/workflows/: cmake-single-platform.yml
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt  hello_world.cpp
solver_application/: CMakeLists.txt  equation.cpp
