cmake_minimum_required(VERSION 3.4)
project(hello_world)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories(../formatter_lib ../formatter_ex_lib)
add_library(formatter STATIC ../formatter_lib/formatter.h ../formatter_lib/formatter.cpp)
add_library(formatter_ex STATIC ../formatter_ex_lib/formatter_ex.h ../formatter_ex_lib/formatter_ex.cpp)
target_link_libraries(formatter_ex formatter)
add_executable(hello_world hello_world.cpp)
target_link_libraries(hello_world formatter_ex)
